# specialtree

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Earthfile  LICENSE-APACHE  LICENSE-MIT  README.md  depgraph.nu  features.md  rustc-ice-2025-04-13T03_43_38-278408.txt
.cargo/: config.toml
abstracted-langspec-gen-util/: Cargo.toml
abstracted-langspec-gen-util/src/: lib.rs
aspect/: Cargo.toml
aspect/src/: lib.rs
bounded-slice/: Cargo.toml
bounded-slice/src/: lib.rs
ccf/: Cargo.toml
ccf/src/: lib.rs  transitivity.rs
codegen-component/: Cargo.toml
codegen-component/src/: lib.rs
conslist/: Cargo.toml
conslist/src/: lib.rs
covisit/: Cargo.toml
covisit/src/: covisiteventsink.rs  lib.rs  select.rs
covisit/tests/: littlecv.rs
either-id/: Cargo.toml
either-id/src/: lib.rs
enumerate/: Cargo.toml
enumerate-random/: Cargo.toml
enumerate-random/src/: co_visit.rs  distribution_provider.rs  lib.rs  select.rs  tmfscore.rs
enumerate/src/: tmfscore.rs
extension-autobox/: Cargo.toml
extension-autobox/src/: lib.rs
extension-everywhere-alternative/: Cargo.toml
extension-everywhere-alternative/src/: lib.rs
extension-everywhere-maybemore/: Cargo.toml
extension-everywhere-maybemore/src/: lib.rs
extension-file/: Cargo.toml
extension-file/src/: lib.rs
extension-pattern/: Cargo.toml
extension-pattern/src/: lib.rs
extensionof-gen/: Cargo.toml
extensionof-gen/examples/: generate-tests.rs
extensionof-gen/src/: lib.rs
extensionof-gen/tests/: traits.rs
file-tmf/: Cargo.toml
file-tmf/src/: lib.rs  parse.rs  unparse.rs
generate-tests/: Cargo.toml
generate-tests-stage2/: Cargo.toml
generate-tests-stage2/src/: main.rs
generate-tests/benches/: generation_benchmark.rs
generate-tests/src/: main.rs  shared.rs
has-own-sort-id/: Cargo.toml
has-own-sort-id-gen/: Cargo.toml
has-own-sort-id-gen/src/: lib.rs
has-own-sort-id/src/: lib.rs
idxbased-extensionof-gen/: Cargo.toml
idxbased-extensionof-gen/examples/: generate-idxbased-extensionof.rs
idxbased-extensionof-gen/src/: lib.rs
idxbased-extensionof-gen/tests/: idxbased-extensionof.rs
idxbased-related-gen/: Cargo.toml
idxbased-related-gen/examples/: generate-idxbased-extensionof.rs
idxbased-related-gen/src/: lib.rs
idxbased-related-gen/tests/: idxbased-extensionof.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: fib-parse.rs  fib-pat-parse.rs
join-boilerplate/: Cargo.toml
join-boilerplate/src/: lib.rs
langdatastructure-gen/: Cargo.toml
langdatastructure-gen/examples/: generate-langdatastructure-tests.rs  generate-tests.rs
langdatastructure-gen/src/: idxbased.rs  lib.rs  refbased.rs
langdatastructure-gen/tests/: fib.rs  fib_idxbased.rs  fib_refbased.rs
langserde/: Cargo.toml
langserde/examples/: generate-langserde.rs
langserde/src/: lib.rs
langserde/tests/: fib.json  langserde.rs  refbased-extensionof.rs
langspec/: Cargo.toml
langspec-examples/: Cargo.toml
langspec-examples/src/: lib.rs
langspec-extension/: Cargo.toml
langspec-extension/src/: lib.rs
langspec-gen-util/: Cargo.toml
langspec-gen-util/src/: lib.rs
langspec-join/: Cargo.toml
langspec-join/src/: lib.rs
langspec-rs-syn/: Cargo.toml
langspec-rs-syn/src/: generation_data.rs  lib.rs  type_path.rs
langspec-std/std-parse-error/: Cargo.toml
langspec-std/std-parse-metadata/: Cargo.toml
langspec-sumextend/: Cargo.toml
langspec-sumextend/src/: lib.rs
langspec-transparent-extension/: Cargo.toml
langspec-transparent-extension/src/: lib.rs
langspec/src/: flat.rs  humanreadable.rs  langspec.rs  lib.rs  sublang.rs  tymetafunc.rs
memo/memo/: Cargo.toml
memo/memo-cache/: Cargo.toml
memo/memo-with-references/: Cargo.toml
names-langspec-sort/: Cargo.toml
names-langspec-sort-gen/: Cargo.toml
names-langspec-sort-gen/src/: lib.rs
names-langspec-sort/src/: lib.rs
parse/: Cargo.toml
parse-adt/: Cargo.toml
parse-adt/src/: cstfy.rs  lib.rs  tmfscore.rs
parse-gen/: Cargo.toml
parse-gen/examples/: generate-parse-tests.rs
parse-gen/src/: lib.rs
parse-gen/tests/: fib_parse.rs  test.rs
parse/src/: lib.rs
pattern/: Cargo.toml
pattern-dyn/: Cargo.toml
pattern-dyn/src/: lib.rs  tmfscore.rs  visitor.rs
pattern-gen/: Cargo.toml
pattern-gen/src/: lib.rs
pattern-lang/: Cargo.toml
pattern-lang/src/: lib.rs
pattern-specialized/: Cargo.toml
pattern-specialized/src/: lib.rs  traits.rs  types.rs
pattern-tmf/: Cargo.toml
pattern-tmf/src/: lib.rs  parse.rs  pattern_dyn.rs  unparse.rs
pattern/src/: lib.rs
pmsp/: Cargo.toml
pmsp/src/: lib.rs
refbased-extensionof-gen/: Cargo.toml
refbased-extensionof-gen/examples/: generate-refbased-extensionof.rs
refbased-extensionof-gen/src/: lib.rs
refbased-extensionof-gen/tests/: refbased-extensionof.rs
refbased-related-gen/: Cargo.toml
refbased-related-gen/examples/: generate-refbased-extensionof.rs
refbased-related-gen/src/: lib.rs
refbased-related-gen/tests/: refbased-extensionof.rs
related-gen/: Cargo.toml
related-gen/examples/: generate-related-tests.rs
related-gen/src/: lib.rs
related-gen/tests/: traits.rs
rustgen-utils/: Cargo.toml
rustgen-utils/src/: lib.rs
sentence-of-gen/: Cargo.toml
sexprfmt/: Cargo.toml
specialized-term/: Cargo.toml
specialized-term-gen/: Cargo.toml
syn-insert-use/: Cargo.toml
take-mut/: Cargo.toml
term/: Cargo.toml
term-bridge-gen/: Cargo.toml
term-of/: Cargo.toml
term-of-gen/: Cargo.toml
term-of/src/: lib.rs
term-pattern-match-strategy-provider-gen/: Cargo.toml
term-pattern-match-strategy-provider-impl-gen/: Cargo.toml
term-specialized-gen/: Cargo.toml
term-specialized-impl-gen/: Cargo.toml
term-trait-gen/: Cargo.toml
term-unspecialized/: Cargo.toml
term-unspecialized-impl-gen/: Cargo.toml
tmfs-join/: Cargo.toml
to-literal/: Cargo.toml
transitive-ccf/: Cargo.toml
tree-identifier/: Cargo.toml
tree-token/: Cargo.toml
tymetafuncspec-core/: Cargo.toml
unparse/: Cargo.toml
unparse-adt/: Cargo.toml
unparse-gen/: Cargo.toml
visit/: Cargo.toml
words/: Cargo.toml
(+120 files in other folders)
