[workspace]

resolver = "2"

members = [
    "langspec-gen-util",
    "langspec-examples",
    "langspec",
    "sexprfmt",
    "term-specialized-gen",
    "term-trait-gen",
    "term",
    "tymetafuncspec-core",
    "term-specialized-impl-gen",
    "parse",
    "extension-everywhere-alternative",
    "either-id",
    "tmfs-join",
    "parse-gen",
    "extension-everywhere-maybemore",
    "join-boilerplate",
    "langspec-std/std-parse-error",
    "langspec-std/std-parse-metadata",
    "generate-tests",
    "term-pattern-match-strategy-provider-impl-gen",
    "parse-adt",
    "words",
    "syn-insert-use",
    "term-bridge-gen",
]
