[workspace]

resolver = "2"

members = [
    "langspec-gen-util",
    "langspec-examples",
    "langspec",
    "sexprfmt",
    "term-specialized-gen",
    "term-trait-gen",
    "term",
    "tymetafuncspec-core",
    "term-specialized-impl-gen",
    "parse",
    "extension-everywhere-alternative",
    "either-id",
    "tmfs-join",
    "parse-gen",
    "extension-everywhere-maybemore",
    "join-boilerplate",
    "langspec-std/std-parse-error",
    "langspec-std/std-parse-metadata",
    "generate-tests",
    "term-pattern-match-strategy-provider-impl-gen",
    "parse-adt",
    "words",
    "syn-insert-use",
    "term-bridge-gen",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bumpalo = "3.16.0"
cargo_metadata = "0.19.2"
derivative = "2.2.0"
derive_more = "0.99.18"
expect-test = "1.5.0"
functor_derive = "0.4.3"
miette = { version = "7.4.0", features = ["serde"] }
prettyplease = "0.2.29"
proc-macro2 = "1.0.92"
quote = "1.0.37"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yml = "0.0.12"
syn = { version = "2.0.98", features = ["full", "visit", "visit-mut"] }
thiserror = "2.0.11"
typed-index-collections = { version = "3.1.0", features = ["serde-std"] }
typenum = "1.18.0"
unicode-segmentation = "1.12.0"
take_mut = "0.2.2"
twox-hash = "2.1.0"
type-equals = "0.1.0"
once_cell = "1.20.2"
slab = "0.4.9"
