[workspace]

resolver = "2"

members = [
    "langspec-gen-util",
    "langspec-examples",
    "langspec",
    "sexprfmt",
    "term-specialized-gen",
    "term-trait-gen",
    "term",
    "tymetafuncspec-core",
    "term-specialized-impl-gen",
    "parse",
    "extension-everywhere-alternative",
    "either-id",
    "tmfs-join",
    "parse-gen",
    "extension-everywhere-maybemore",
    "join-boilerplate",
    "langspec-std/std-parse-error",
    "langspec-std/std-parse-metadata",
    "generate-tests",
    "term-pattern-match-strategy-provider-impl-gen",
    "parse-adt",
    "words",
    "syn-insert-use",
    "term-bridge-gen",
    "langspec-extension",
    "extension-autobox",
    "term-pattern-match-strategy-provider-gen",
    "langspec-transparent-extension",
    "enumerate-random",
    "unparse-adt", "unparse-gen",
]

[profile.release]
debug = true # debug symbols

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bumpalo = "3.17.0"
cargo_metadata = "0.19.2"
derivative = "2.2.0"
derive_more = "0.99.20"
expect-test = "1.5.1"
fn-traits = "0.2.0"
functor_derive = "0.4.3"
miette = { version = "7.5.0", features = ["serde"] }
prettyplease = "0.2.32"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = "0.9.1"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
syn = { version = "2.0.100", features = ["full", "visit", "visit-mut"] }
thiserror = "2.0.12"
typed-index-collections = { version = "3.2.3", features = ["serde-std"] }
typenum = "1.18.0"
unicode-segmentation = "1.12.0"
take_mut = "0.2.2"
twox-hash = "2.1.0"
type-equals = "0.1.0"
once_cell = "1.21.3"
slab = "0.4.9"
