[package]
name = "codegen-component"
version.workspace = true
edition.workspace = true
description = "Representation of a module of generated Rust code and its dependencies"

[dependencies]
bumpalo.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
serde.workspace = true
syn.workspace = true
syn-insert-use.path = "../syn-insert-use"
toml.workspace = true
