[package]
name = "covisit"
version.workspace = true
edition.workspace = true
description = "Abstract implementation of steered corecursive construction of possibly inductive data types"

[dependencies]
ccf = { version = "0.1.0", path = "../ccf" }
conslist = { version = "0.1.0", path = "../conslist" }
pmsp = { version = "0.1.0", path = "../pmsp" }
take-mut = { version = "0.1.0", path = "../take-mut" }
words = { version = "0.1.0", path = "../words" }
