[package]
name = "enumerate-random"
version.workspace = true
edition.workspace = true
description = "Random generation of terms in a language"

[dependencies]
derivative.workspace = true
rand.workspace = true
rand_distr.workspace = true
typenum.workspace = true
term.path = "../term"
tymetafuncspec-core.path = "../tymetafuncspec-core"
