[package]
name = "extension-everywhere-alternative"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
either-id = { path = "../either-id" }
langspec = { path = "../langspec" }
langspec-extension = { path = "../langspec-extension" }
tymetafuncspec-core = { path = "../tymetafuncspec-core" }
