[package]
name = "extension-everywhere-maybemore"
version = "0.1.0"
edition = "2021"

[dependencies]
either-id = { version = "0.1.0", path = "../either-id" }
join-boilerplate = { version = "0.1.0", path = "../join-boilerplate" }
langspec = { version = "0.1.0", path = "../langspec" }
tmfs-join = { version = "0.1.0", path = "../tmfs-join" }
tymetafuncspec-core = { version = "0.1.0", path = "../tymetafuncspec-core" }
