[package]
name = "extension-file"
version.workspace = true
edition.workspace = true

[dependencies]
either-id = { version = "0.1.0", path = "../either-id" }
file-tmf = { version = "0.1.0", path = "../file-tmf" }
join-boilerplate = { version = "0.1.0", path = "../join-boilerplate" }
langspec = { version = "0.1.0", path = "../langspec" }
tmfs-join = { version = "0.1.0", path = "../tmfs-join" }
