[package]
name = "extension-file"
version.workspace = true
edition.workspace = true
description = "Language extension that embeds a language inside of files in a file system"

[dependencies]
either-id = { version = "0.1.0", path = "../either-id" }
file-tmf = { version = "0.1.0", path = "../file-tmf" }
langspec = { version = "0.1.0", path = "../langspec" }
tmfs-join = { version = "0.1.0", path = "../tmfs-join" }
tree-identifier = { path = "../tree-identifier" }
