[package]
name = "extension-pattern"
version.workspace = true
edition.workspace = true

[dependencies]
either-id = { version = "0.1.0", path = "../either-id" }
join-boilerplate = { version = "0.1.0", path = "../join-boilerplate" }
langspec = { version = "0.1.0", path = "../langspec" }
pattern-tmf = { version = "0.1.0", path = "../pattern-tmf" }
tmfs-join = { version = "0.1.0", path = "../tmfs-join" }
