[package]
name = "generate-tests-stage2"
version.workspace = true
edition.workspace = true
description = "Binary crate for running a second stage of code generation on an example language"

[dependencies]
langspec-examples.path = "../langspec-examples"
langspec.path = "../langspec"
tymetafuncspec-core = { version = "0.1.0", path = "../tymetafuncspec-core" }
