[package]
name = "generate-tests"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
cargo_metadata = { workspace = true }
bumpalo.workspace = true
syn = { workspace = true }
term-trait-gen = { path = "../term-trait-gen" }
term-specialized-gen = { path = "../term-specialized-gen" }
term-specialized-impl-gen = { path = "../term-specialized-impl-gen" }
codegen-component = { path = "../codegen-component" }
langspec-examples.path = "../langspec-examples"
langspec.path = "../langspec"
words.path = "../words"
