[package]
name = "generate-tests"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
bumpalo.workspace = true
term-pattern-match-strategy-provider-gen = { path = "../term-pattern-match-strategy-provider-gen" }
term-pattern-match-strategy-provider-impl-gen = { path = "../term-pattern-match-strategy-provider-impl-gen" }
term-trait-gen = { path = "../term-trait-gen" }
term-specialized-gen = { path = "../term-specialized-gen" }
term-specialized-impl-gen = { path = "../term-specialized-impl-gen" }
codegen-component = { path = "../codegen-component" }
langspec-examples.path = "../langspec-examples"
langspec.path = "../langspec"
words.path = "../words"
parse-gen = { version = "0.1.0", path = "../parse-gen" }
pattern-gen = { version = "0.1.0", path = "../pattern-gen" }
names-langspec-sort-gen = { version = "0.1.0", path = "../names-langspec-sort-gen" }
extension-pattern = { version = "0.1.0", path = "../extension-pattern" }
extension-file = { version = "0.1.0", path = "../extension-file" }
