[package]
name = "generate-tests"
version = { workspace = true }
edition = { workspace = true }
description = "Binary crate for running code generation on an example language"

[dependencies]
bumpalo.workspace = true
tree-identifier = { path = "../tree-identifier" }
term-pattern-match-strategy-provider-gen = { path = "../term-pattern-match-strategy-provider-gen" }
term-pattern-match-strategy-provider-impl-gen = { path = "../term-pattern-match-strategy-provider-impl-gen" }
term-trait-gen = { path = "../term-trait-gen" }
term-specialized-gen = { path = "../term-specialized-gen" }
codegen-component = { path = "../codegen-component" }
langspec-examples.path = "../langspec-examples"
langspec.path = "../langspec"
words.path = "../words"
parse-gen = { version = "0.1.0", path = "../parse-gen" }
names-langspec-sort-gen = { version = "0.1.0", path = "../names-langspec-sort-gen" }
extension-pattern = { version = "0.1.0", path = "../extension-pattern" }
term-bridge-gen = { version = "0.1.0", path = "../term-bridge-gen" }
extension-autobox = { version = "0.1.0", path = "../extension-autobox" }
langspec-rs-syn = { path = "../langspec-rs-syn" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
