[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

[dev-dependencies]
fib-parse = { path = "../generated/fib-parse" }

[dependencies]
fib = { version = "0.0.0", path = "../generated/fib" }
fib-pat = { version = "0.0.0", path = "../generated/fib-pat" }
fib-pat-parse = { version = "0.0.0", path = "../generated/fib-pat-parse" }
file-tmf = { version = "0.1.0", path = "../file-tmf" }
pattern-dyn = { version = "0.1.0", path = "../pattern-dyn" }
unparse-adt = { version = "0.1.0", path = "../unparse-adt" }
