[package]
name = "join-boilerplate"
version = { workspace = true }
edition = { workspace = true }
description = "Boilerplate for implementing language extensions that involve combining two languages"

[dependencies]
either-id = { path = "../either-id" }
langspec = { path = "../langspec" }
tmfs-join = { version = "0.1.0", path = "../tmfs-join" }
