[package]
name = "langdatastructure-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expect-test = "1.5.0"
langspec = { version = "0.1.0", path = "../langspec" }
quote = "1.0.37"
syn = { version = "2.0.79", features = ["full"] }

[dev-dependencies]
langspec-examples = { path = "../langspec-examples" }
