[package]
name = "langserde"
version = "0.1.0"
edition = "2021"

[dependencies]
related-gen = { version = "0.1.0", path = "../related-gen" }
idxbased-related-gen = { version = "0.1.0", path = "../idxbased-related-gen" }
langdatastructure-gen = { version = "0.1.0", path = "../langdatastructure-gen" }
langspec = { version = "0.1.0", path = "../langspec" }
langspec-gen-util = { version = "0.1.0", path = "../langspec-gen-util" }
prettyplease = "0.2.25"
quote = "1.0.37"
refbased-related-gen = { version = "0.1.0", path = "../refbased-related-gen" }
syn = "2.0.87"

[dev-dependencies]
expect-test = "1.5.0"
langspec-examples = { path = "../langspec-examples" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
