[package]
name = "langspec-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expect-test = "1.5.0"
knuffel = "3.2.0"
langspec = { version = "0.1.0", path = "../langspec" }
lexpr = { version = "0.2.7", default-features = false }
miette = { version = "=5.6.0", features = ["fancy"] }
serde-lexpr = "0.1.3"
serde_yml = "0.0.12"
typed-index-collections = "3.1.0"
