[package]
name = "langspec-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expect-test = "1.5.0"
langspec = { version = "0.1.0", path = "../langspec" }
serde_json = "1.0.133"
tymetafuncspec-core = { version = "0.1.0", path = "../tymetafuncspec-core" }
typed-index-collections = "3.1.0"
