[package]
name = "langspec-examples"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
langspec = { path = "../langspec" }
tymetafuncspec-core = { path = "../tymetafuncspec-core" }
expect-test = { workspace = true }
serde_json = { workspace = true }
typed-index-collections = { workspace = true }
