[package]
name = "langspec-extension"
version.workspace = true
edition.workspace = true
description = "A utility for implementing language extensions"

[dependencies]
either-id = { path = "../either-id" }
join-boilerplate = { path = "../join-boilerplate" }
langspec = { path = "../langspec" }
tmfs-join = { path = "../tmfs-join" }
tree-identifier = { path = "../tree-identifier" }
tymetafuncspec-core = { path = "../tymetafuncspec-core" }
