[package]
name = "langspec-gen-util"
version = { workspace = true }
edition = { workspace = true }
description = "Legacy code generation utilities for language specifications (being refactored into smaller crates)"

[dependencies]
langspec = { path = "../langspec" }
term = { path = "../term" }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
langspec-examples = { path = "../langspec-examples" }
tymetafuncspec-core = { path = "../tymetafuncspec-core" }
