[package]
name = "langspec-gen-util"
version = { workspace = true }
edition = { workspace = true }
description = "Legacy code generation utilities for language specifications (being refactored into smaller crates)"

[dependencies]
langspec = { path = "../langspec" }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rustgen-utils = { path = "../rustgen-utils" }
syn = { workspace = true }
term = { path = "../term" }
tree-identifier = { path = "../tree-identifier" }

[dev-dependencies]
langspec-examples = { path = "../langspec-examples" }
tymetafuncspec-core = { path = "../tymetafuncspec-core" }
