[package]
name = "langspec-join"
version = "0.1.0"
edition = "2021"

[dependencies]
expect-test = "1.5.0"
functor_derive = "0.4.3"
langspec = { version = "0.1.0", path = "../langspec" }
serde_json = "1.0.133"
serde_yml = "0.0.12"

[dev-dependencies]
langspec-examples = { path = "../langspec-examples" }
