[package]
name = "langspec-transparent-extension"
version.workspace = true
edition.workspace = true
description = "Utility for implementing an extension of a language that adds no visible functionality"

[dependencies]
either-id = { path = "../either-id" }
langspec = { path = "../langspec" }
tmfs-join = { path = "../tmfs-join" }
tree-identifier = { path = "../tree-identifier" }
