[package]
name = "langspec"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
functor_derive = { workspace = true }
proc-macro2.workspace = true
serde = { workspace = true }
serde_yml = { workspace = true }
syn = { workspace = true }
typed-index-collections = { workspace = true }

[dev-dependencies]
quote = { workspace = true }
