[package]
name = "langspec"
version = { workspace = true }
edition = { workspace = true }
description = "Specification for a language consisting of to-be-generated ADTs and type metafunctions that have Rust implementations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
functor_derive = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
syn = { workspace = true }
tree-identifier = { path = "../tree-identifier" }
typed-index-collections = { workspace = true }

[dev-dependencies]
quote = { workspace = true }
