[package]
name = "names-langspec-sort-gen"
version.workspace = true
edition.workspace = true
description = "Generation of implementations for NamesLangspecSort"

[dependencies]
codegen-component = { version = "0.1.0", path = "../codegen-component" }
langspec = { version = "0.1.0", path = "../langspec" }
langspec-rs-syn = { path = "../langspec-rs-syn" }
rustgen-utils = { path = "../rustgen-utils" }
syn.workspace = true
words = { version = "0.1.0", path = "../words" }
