[package]
name = "parse-adt"
version = { workspace = true }
edition = { workspace = true }
description = "Parsing code used by ADT-like generated data structures"

[dependencies]
parse = { path = "../parse" }
std-parse-error = { path = "../langspec-std/std-parse-error" }
std-parse-metadata = { path = "../langspec-std/std-parse-metadata" }
term = { path = "../term" }
tymetafuncspec-core = { path = "../tymetafuncspec-core" }
miette = { workspace = true }
typenum = { workspace = true }
unicode-segmentation = { workspace = true }
take-mut = { version = "0.1.0", path = "../take-mut" }
words.path = "../words"
covisit = { version = "0.1.0", path = "../covisit" }
pmsp = { version = "0.1.0", path = "../pmsp" }
conslist = { version = "0.1.0", path = "../conslist" }
ccf = { version = "0.1.0", path = "../ccf" }
