[package]
name = "parse-gen"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
typenum = { workspace = true }
bumpalo = { workspace = true }
prettyplease = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
extension-everywhere-alternative = { path = "../extension-everywhere-alternative" }
extension-everywhere-maybemore = { path = "../extension-everywhere-maybemore" }
langspec = { path = "../langspec" }
langspec-gen-util = { path = "../langspec-gen-util" }
parse-adt = { path = "../parse-adt" }
std-parse-error = { path = "../langspec-std/std-parse-error" }
std-parse-metadata = { path = "../langspec-std/std-parse-metadata" }
syn-insert-use = { path = "../syn-insert-use" }
term-bridge-gen = { path = "../term-bridge-gen" }
term-pattern-match-strategy-provider-impl-gen = { path = "../term-pattern-match-strategy-provider-impl-gen" }
term-specialized-gen = { path = "../term-specialized-gen" }
term-specialized-impl-gen = { path = "../term-specialized-impl-gen" }
term-trait-gen = { path = "../term-trait-gen" }
tymetafuncspec-core = { path = "../tymetafuncspec-core" }
words = { path = "../words" }

[dev-dependencies]
miette = { workspace = true }
langspec-examples = { path = "../langspec-examples" }
parse = { path = "../parse" }
term = { path = "../term" }
