[package]
name = "parse-gen"
version = { workspace = true }
edition = { workspace = true }
description = "Code generation related to parsing"

[dependencies]
bumpalo = { workspace = true }
syn = { workspace = true }
extension-autobox = { path = "../extension-autobox" }
extension-everywhere-alternative = { path = "../extension-everywhere-alternative" }
extension-everywhere-maybemore = { path = "../extension-everywhere-maybemore" }
langspec = { path = "../langspec" }
langspec-gen-util = { path = "../langspec-gen-util" }
rustgen-utils = { path = "../rustgen-utils" }
std-parse-error = { path = "../langspec-std/std-parse-error" }
std-parse-metadata = { path = "../langspec-std/std-parse-metadata" }
tree-identifier = { path = "../tree-identifier" }
term-bridge-gen = { path = "../term-bridge-gen" }
term-pattern-match-strategy-provider-gen = { path = "../term-pattern-match-strategy-provider-gen" }
term-pattern-match-strategy-provider-impl-gen = { path = "../term-pattern-match-strategy-provider-impl-gen" }
term-specialized-gen = { path = "../term-specialized-gen" }
term-specialized-impl-gen = { path = "../term-specialized-impl-gen" }
term-trait-gen = { path = "../term-trait-gen" }
words = { path = "../words" }
codegen-component = { version = "0.1.0", path = "../codegen-component" }

[dev-dependencies]
typenum = { workspace = true }
miette = { workspace = true }
parse = { path = "../parse" }
term = { path = "../term" }
langspec-examples = { path = "../langspec-examples" }
parse-adt = { path = "../parse-adt" }
tymetafuncspec-core = { path = "../tymetafuncspec-core" }
