[package]
name = "parse"
version = { workspace = true }
edition = { workspace = true }
description = "Data structures referenced by generated parsing functions"

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = { workspace = true }
